src/objects/Territory_Geography__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>Territory_AppD__c</referenceTo>
        <relationshipLabel>Territory Geographies</relationshipLabel>
        <relationshipName>Territory_Geographies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zip_End__c</fullName>
        <label>Zip End</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Start__c</fullName>
        <label>Zip Start</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Territory Geography</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Territory Geography Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Geographies</pluralLabel>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead</fullName>
        <active>true</active>
        <label>Lead</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>